# ChangeLog for dev-java/plexus-active-collections
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  11 Jun 2007; kiorky <kiorky@cryptelium.net>
  +plexus-active-collections-1.0_beta2_pre20070611.ebuild, +metadata.xml:
  Added as a maven dependency. See #181700
