@@ -1,5 +1,5 @@
 DIST plexus-active-collections-1.0_beta2_pre20070611-gen-src.tar.bz2 358 RMD160 39a01e3c415409878227cb1bf8abbfec8c39b5df SHA1 e79cae6e4b9945be10eb3675d4403ceb8eb531a3 SHA256 f281928b4fcbe282080a68cdc316934cbe11b161cd6451dce7645e41b8016f1d
 DIST plexus-active-collections-1.0_beta2_pre20070611.tar.bz2 16801 RMD160 b9a5a244d3f16f49339be00ea43fe05c7806ab2f SHA1 b760567e257819121826d932f2d44ae17461ffa7 SHA256 e5430b2b9e3a8b039fcb26c045254ae9ec1c9a865558bff8fb104c4ef770d0c3
-EBUILD plexus-active-collections-1.0_beta2_pre20070611.ebuild 781 RMD160 6c16e6c4b9724c782974fa94d211c0feb1967b96 SHA1 986f09b850a237e75432a1d7b071cb73e4e23c48 SHA256 f6b4636e74920fef5856e13798ff46653260eac4d30054610c41ada8503f1505
-MISC ChangeLog 299 RMD160 ce2ca6c8425f9632e7a8a217423c85f50a6118f2 SHA1 233dc540ed798830e66bce438ee52ba0f04d53e6 SHA256 378ca97a18152ca3197aeea6d5ca61966ba7fecc2561cab23f2e70f87eb54a43
+EBUILD plexus-active-collections-1.0_beta2_pre20070611.ebuild 883 RMD160 6d0d655377fbedb904d6cb7b5e1443e0acfd2d63 SHA1 8e361587c76dfd5becb78516075258b87d1cf403 SHA256 51b5b4f4d78f8eb2165f634862c95f7718f831332606409ca8a0b3a6751cdc21
+MISC ChangeLog 418 RMD160 3bd3b15d16fdb2a0aa8ede0d2b0100a51fff4b83 SHA1 4aae8f23a134933f3d584051d63326cd167316a1 SHA256 e72e1e1887b09dfd2aa1b2999460b84ad3806a75feb821e29fde4b0e5d0ef0c7
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
